syntax = "proto3";

package protoDistrSorting;

service DistrSorting {
  rpc assignID(DummyText) returns (ID) {}
  rpc getConnectionInformation(ConnectionInformation) returns (DummyText) {}
  rpc sendConnectionInformation(DummyText) returns (ConnectionInformations) {}
  rpc determineKeyRange(KeyRange) returns (DummyText) {}
  rpc isDonePartitioning(DummyText) returns (DummyText) {}
  rpc sendPartitionedValues(DummyText) returns (PartitionedValues) {}
}

message KeyRange {
  string minKey = 1;
  string maxKey = 2;
}

message ID {
  int32 id = 1;
}

message ConnectionInformation {
  string host = 1;
  int32 port = 2;
  int32 id = 3;
}

message ConnectionInformations {
  repeated ConnectionInformation information = 1;
}

message DummyText {
  string dummyText = 1;
}

message PartitionedValues {
  repeated Partition partitions = 1;
}

message Partition {
  string minVal = 1;
  string maxVal = 2;
}

message Dataset {
  repeated Data data = 1;
  int32 partitionID = 2;
  int32 fromUserID = 3;
}

message Data {
  string key = 1;
  string value = 2;
}